--- a/index.html.HTML
+++ b/index.html.HTML
@@ -219,7 +219,7 @@
                 선정한 미국 시사주간지<타임>.
             </div>
             
-            <div class="png1"><img src="IMG/그룹 16.png" alt="BTS LOGO"></div>
+            <div class="png1"><img src="IMG/group16.png" alt="BTSLOGO"></div>
             <div>
             <div class="square1"><img src="IMG/imgimg.png" alt="photo square1">
             <div class="png2"><img src="IMG/P00.png" alt="first photo"></div>
@@ -280,7 +280,7 @@
                  테일러 스위프트와,<br> 방탄소년단뿐입니다. 방탄소년단은 어떻게 이런 성과를 낼 수 있었을까요?
             </div>
             <div class="circle"><img src="IMG/circle.png" alt="circle1"></div>
-            <div class="shapes14"><img src="IMG/사각형 14.png" alt="shapes14"></div>
+            <div class="shapes14"><img src="IMG/square14.png" alt="shapes14"></div>
             <div class="png6"><img src="IMG/P06.png" alt="png"></div>
             <div class="title7">독보적 음악과 퍼포먼스, 팬덤 ‘아미’의 힘 등 다양한 요인이 있겠지만,<br>
                 저는 그들이 세상에 전한 ‘위로’와 ‘희망’을 꼽고 싶습니다. <br>
